Fix teams dropdown overflow (#1069)
This fixing a missing scrollbar in the filter for teams on the homepage.

--- a/services/frontend-service/src/ui/components/dropdown/dropdown.scss
+++ b/services/frontend-service/src/ui/components/dropdown/dropdown.scss
@@ -45,6 +45,7 @@ div.mdc-select {
 }
 
 .dropdown {
+    overflow-y: auto;
     min-width: 220px;
     left: 0;
     top: -5px;
